force-app/main/default/objects/User_Self_Registration__c/User_Self_Registration__c.object-meta.xml
<CustomObject>
    <label>User Self Registration</label>
    <nameField>
        <displayFormat>RN-{000000}</displayFormat>
        <label>User Self Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users Self Registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>