force-app/main/default/objects/User_Self_Registration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Map to Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Users Self Registration</relationshipLabel>
    <relationshipName>Users_Self_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>