force-app/main/default/objects/User_Self_Registration__c/fields/Company_Name_DBA__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_DBA__c</fullName>
    <label>Company Name &amp; DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>