force-app/main/default/objects/User_Self_Registration__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response</label>
    <type>Checkbox</type>
</CustomField>