force-app/main/default/objects/User_Self_Registration__c/fields/Response_Email__c.field-meta.xml
<CustomField>
    <fullName>Response_Email__c</fullName>
    <label>Response Email</label>
    <type>Email</type>
</CustomField>