force-app/main/default/objects/User_Self_Registration__c/fields/State_License_Number__c.field-meta.xml
<CustomField>
    <fullName>State_License_Number__c</fullName>
    <label>State License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>