force-app/main/default/objects/User_Self_Registration__c/listViews/Open_Request.listView-meta.xml
<ListView>
    <fullName>Open_Request</fullName>
    <columns>NAME</columns>
    <columns>Company_Name_DBA__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>License_Type__c</columns>
    <columns>Title__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>State_License_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Open Request</label>
</ListView>